[gd_scene load_steps=3 format=3 uid="uid://ce4aqbsmlvgs0"]

[ext_resource type="Script" path="res://components/cards/2D/deck_test.gd" id="1_xp6n1"]
[ext_resource type="PackedScene" uid="uid://gfjggii0tf5r" path="res://components/cards/2D/deck_pile.tscn" id="2_j0h3i"]

[node name="DeckTest" type="Node"]
script = ExtResource("1_xp6n1")

[node name="NumberCard" type="Marker2D" parent="."]
position = Vector2(278, 187)

[node name="AceCard" type="Marker2D" parent="."]
position = Vector2(151, 190)

[node name="JackCard" type="Marker2D" parent="."]
position = Vector2(568, 189)

[node name="QueenCard" type="Marker2D" parent="."]
position = Vector2(427, 185)

[node name="KingCard" type="Marker2D" parent="."]
position = Vector2(692, 193)

[node name="JokerCard" type="Marker2D" parent="."]
position = Vector2(279, 444)

[node name="Back" type="Marker2D" parent="."]
position = Vector2(174, 440)

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = 1032.0
offset_top = 492.0
offset_right = 1064.0
offset_bottom = 512.0

[node name="DeckPile" parent="." instance=ExtResource("2_j0h3i")]
position = Vector2(1037, 236)
maximum_cards_in_pile = 2
allowed_spanish_suits = Array[int]([2, 3])
